# zep

./: .travis.yml  CMakeLists.txt  TODO.md  deploy.bat  prebuild.bat  prebuild.sh  zep.cfg
cmake/: msvc.cmake  zep-config.cmake.in
demo_imgui/: CMakeLists.txt  chibi.cpp  chibi.h  main.cpp
demo_qt/: CMakeLists.txt  main-qt.cpp  mainwindow.cpp  mainwindow.h
include/zep/: buffer.h  commands.h  editor.h  keymap.h  mode.h  mode_repl.h  mode_search.h  mode_standard.h  mode_tree.h  mode_vim.h  window.h
include/zep/imgui/: console_imgui.h  display_imgui.h  editor_imgui.h
include/zep/mcommon/math/: math.h
include/zep/mcommon/string/: stringutils.h
include/zep/qt/: common_qt.h  zepdisplay_qt.h  zepwidget_qt.h
m3rdparty/mal/: list.cmake
m3rdparty/mal/include/mal/: debug.h  environment.h  mal.h  refcountedptr.h  types.h  validation.h
m3rdparty/mal/src/: core.cpp  environment.cpp  list.cmake  mal.cpp  reader.cpp  string.cpp  types.cpp  validation.cpp
m3rdparty/sdl2/: CMakeLists.txt  install.bat
scripts/: travis_install.sh  travis_script.sh
src/: buffer.cpp  commands.cpp  editor.cpp  keymap.cpp  list.cmake  mode.cpp  mode_repl.cpp  mode_search.cpp  mode_standard.cpp  mode_tree.cpp  mode_vim.cpp  syntax.cpp  syntax_providers.cpp  syntax_rainbow_brackets.cpp  theme.cpp  window.cpp
src/imgui/: CMakeLists.txt  editor_imgui.cpp
src/mcommon/string/: stringutils.cpp
src/qt/: CMakeLists.txt  zepwidget_qt.cpp
src/tests/: mode_standard.test.cpp  mode_vim.test.cpp
tests/: CMakeLists.txt
